Fix wrapping for statistics.

--- a/css/style.less
+++ b/css/style.less
@@ -86,3 +86,14 @@ h1 {
 p.statistics {
      font-size: 28px;
 }
+
+div.statistics > ul > li {
+      margin: 30px 0;
+      line-height: 1.5;
+}
+
+div.statistics > ul > li > img {
+    margin-right: 30px;
+    width: 30px;
+    vertical-align: text-middle;
+}
